Enhance blog layout and functionality with cover images, visit count, and Giscus integration

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,9 @@
 <link rel="stylesheet" href="/styles/shortcodes.css">
 
 <script src="https://open.spotify.com/embed/iframe-api/v1"></script>
+<script data-goatcounter="https://alexander499.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 <script defer src="https://unpkg.com/lucide@latest"></script>
+
 <script defer src="/scripts/lang.js"></script>
 <script defer src="/scripts/general.js"></script>
 <script defer src="/scripts/home.js"></script>
@@ -202,7 +204,9 @@
   <footer id="footer">
   <div>
     <div class="left">
-      &copy; 2025 Alexander499 - ❤️‍🔥 <a href>Alexander499</a>
+      &copy; 2025 Alexander499 -
+      ❤️‍🔥 <a href="/">Alexander499</a>
+      - Visits:  <span id="visitCount">&ndash;</span>
     </div>
     <div class="right">
       <ul>
